--- a/bio.html
+++ b/bio.html
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="index.html">PANG</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -100,81 +100,14 @@
 
 <!-- Container (The Register Section) -->
 <div id="Register" class="container text-center">
+  <br> <br>
   <h3>REGISTER</h3>
   <p><em>Let's EAT!</em></p>
   <p>
-We would like to create a message board for restaurants and those who are hunger and don’t have many opportunities to afford food of higher quality or get it for free. Our website will as well involve the audience to think about how they can create change in the issue of hunger.
+We would like to create a message board between restaurants and people who are hungry and can't afford high quality . Our website will as well involve the audience to think about how they can create change in the issue of hunger.
 </p>
   <br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p class="text-center"><strong>1</strong></p><br>
-      <a href="#demo" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo" class="collapse">
-        <p>We connect with businesses. Communicate the quanity and quality of food they are able to give.</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>2</strong></p><br>
-      <a href="#demo2" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>You can go get food at a sepcific time and location from a low to no cost.</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>3</strong></p><br>
-      <a href="#demo3" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo3" class="collapse">
-        <p>This not only feeds you, but help a business from throwing away good and edible food away.</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- Container (Locations Section) -->
-<div id="Locations" class="bg-1">
-  <div class="container">
-    <h3 class="text-center">Locations</h3>
-    <p class="text-center">Here to eat?<br> Just remember to book your tickets!</p>
-    <ul class="list-group">
-      <li class="list-group-item">September <span class="label label-danger">Sold Out!</span></li>
-      <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li>
-      <li class="list-group-item">November <span class="badge">3</span></li>
-    </ul>
-
-    <div class="row text-center">
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
-          <p>Friday 27 November 2017</p>
-          <button class="btn" data-toggle="modal" data-target="#myModal">Open</button>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
-          <p>Saturday 28 November 2017</p>
-          <button class="btn" data-toggle="modal" data-target="#myModal">Open</button>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
-          <p>Sunday 29 November 2017</p>
-          <button class="btn" data-toggle="modal" data-target="#myModal">Open</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -250,6 +183,7 @@ We would like to create a message board for restaurants and those who are hunger
     <li><a data-toggle="tab" href="#menu2">Nisha</a></li>
     <li><a data-toggle="tab" href="#menu3">Hana</a></li>
     <li><a data-toggle="tab" href="#menu4">Pascal</a></li>
+    <li><a data-toggle="tab" href="#menu4">Megan</a></li>
   </ul>
 
   <div class="tab-content">
