--- a/bio.html
+++ b/bio.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
 
-
-
   <title>Pang</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +17,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="biostyle.css">
+  <link rel="stylesheet" type="text/css" href="styles/biostyle.css">
 
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -38,112 +36,49 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">About</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-
-          </ul>
-        </li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="ny.jpg" alt="New York" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>Food Wasted</h3>
-          <p>An estimated of $1 trillion dollars is wasted/lost in food.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>Food Prefrences</h3>
-          <p>A cucumber farmer estimated that fewer than half the vegetables he grows actually leave his farm and that 75 percent of them removed before sale are edible.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>A Step Forward</h3>
-          <p>The USDA has been working on a way to get business to reduce their amount of food loss by having 3 program: U.S. Food Loss and Waste 2030 Champions, Food Recovery Challenge and U.S Food Waste Challenge.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
 
 <!-- Container (The Register Section) -->
 <div id="Register" class="container text-center">
   <br> <br>
-  <h3>REGISTER</h3>
-  <p><em>Let's EAT!</em></p>
-  <p>
-We would like to create a message board between restaurants and people who are hungry and can't afford high quality . Our website will as well involve the audience to think about how they can create change in the issue of hunger.
-</p>
+  <h3>ABOUT PANG</h3>
+  <p><em>Our mission</em></p>
+
+  <p>Pang is a message board for restaurants who wish to help hungry people in need. Restaurants that have leftover but safe-to-eat food can post Pang updates using a verified gmail account to inform the hungry of times they can pick up excess food. </p>
+  <p>This solution means that restaurants produce less waste, and fewer people go hungry. It’s a win-win situation! Pang does not profit off of these interactions, we merely seek to promote social good.</p>
+
   <br>
-
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4><span class="glyphicon glyphicon-lock"></span> Meals</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form">
-            <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $2 per person</label>
-              <input type="number" class="form-control" id="psw" placeholder="How many?">
-            </div>
-            <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
-              <input type="text" class="form-control" id="usrname" placeholder="Enter email">
-            </div>
-              <button type="submit" class="btn btn-block">Pay
-                <span class="glyphicon glyphicon-ok"></span>
-              </button>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-            <span class="glyphicon glyphicon-remove"></span> Cancel
-          </button>
-          <p>Need <a href="#">help?</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
+
+<!-- <video controls="controls" width="400" height="300" name="Video Name" src="/images/foodVid.mov"></video> -->
+
+  <section id="allfacts">
+    <div class="facts">
+      <br>
+        <p>The USDA defines "food insecurity" as the lack of access, at times, to enough food for all household members. In 2011, households with children reported a significantly higher food insecurity rate than households without children: 20.6% vs. 12.2%.
+        </p>
+    </div>
+    <div class="facts">
+      <br>
+        <p>Roughly 50 percent of all produce in the United States is thrown away—some 60 million tons (or $160 billion) worth of produce annually, an amount constituting “one third of all foodstuffs.”
+        </p>
+    </div>
+    <div class="facts">
+      <br>
+      <p>The USDA has been working on a way to get business to reduce their amount of food loss by having 3 program: U.S. Food Loss and Waste 2030 Champions, Food Recovery Challenge and U.S Food Waste Challenge.
+      </p>
+    </div>
+    <div class="facts">
+      <br>
+      <p>Huffington Post sources found that farmers themselves know that food is being discarded only due to the appearance. For instance, the article stated ‘ A cucumber farmer estimated that fewer than half the vegetables he grows actually leave his farm and that 75 percent of them removed before sale are edible.
+      </p>
+    </div>
+  </section>
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container">
@@ -154,8 +89,8 @@ We would like to create a message board between restaurants and people who are h
     <div class="col-md-4">
       <p>Fan? Want something fixed? Drop a note.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: hunuger@mail.com</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Phone: +111 - 111 - 1111</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: panghunger@gmail.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -176,7 +111,7 @@ We would like to create a message board between restaurants and people who are h
     </div>
   </div>
   <br>
-  <h3 class="text-center">From Our Blog</h3>
+  <h3 class="text-center">About the creators </h3>
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Jessica</a></li>
     <li><a data-toggle="tab" href="#menu1">Annika</a></li>
@@ -188,19 +123,28 @@ We would like to create a message board between restaurants and people who are h
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <p>I’m sixteen and I enjoy coding because I’m able to communicate my ideas of social issues to the general public in more of a visual aspect by using videos and photos to have more of a personal connection. I came to CodeDay in hopes of building my network and have fun with my new coding friends.</p>
+      <br><p>I’m sixteen and I enjoy coding because I’m able to communicate my ideas of social issues to the general public in more of a visual aspect by using videos and photos to have more of a personal connection. I came to CodeDay in hopes of building my network and have fun with my new coding friends.</p>
+      <br>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <p>I’m Annika, and I’m a senior at Conant High School. This is my first hackathon, but I have previously participated in the Girls Who Code Summer Immersion Program. My favorite language is Python. Besides coding, I enjoy reading, spending time with friends, writing for my school newspaper, and playing soccer. Thank you to my teachers and family who have encouraged my interest in computer science.</p>
+      <br><p>I’m Annika, and I’m a senior at Conant High School. This is my first hackathon, but I have previously participated in the Girls Who Code Summer Immersion Program. My favorite language is Python. Besides coding, I enjoy reading, spending time with friends, writing for my school newspaper, and playing soccer. Thank you to my teachers and family who have encouraged my interest in computer science.</p>
+      <br>
     </div>
      <div id="menu3" class="tab-pane fade">
-      <p>Hana</p>
+      <br><p>Yo it’s Hana and I am a junior at Naperville Central. This is my first CodeDay and I am interested in web development. I enjoy coding because I see it as a medium to tell stories and spread your message in an digitalized world. I came here today hoping to learn from the mentors and meet some super cool coding friends. Besides from programming, you’ll see me hanging out with friends, volunteering with the local Rotary Interact Club, and participating in different clubs at school. </p>
+      <br>
     </div>
      <div id="menu4" class="tab-pane fade">
-      <p>Pascal</p>
+      <br><p>Hi! I’m Pascal, a sophomore at the Illinois Math and Science Academy. My passions outside of code include sports, reading, and graphic design. I came to CodeDay to work on programming, web development, and to forge relationships with other passionate coders.</p>
+      <br>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <p> Hey! I’m Nisha, a junior at Conant High School. I am interested in machine learning and web design. When I’m not programming, you can find me running, taking photos, reading, trying new foods and listening to music. </p>
+      <br><p> Hey! I’m Nisha, a junior at Conant High School. I am interested in machine learning and web design. When I’m not programming, you can find me running, taking photos, reading, trying new foods and listening to music. </p>
+      <br>
+    </div>
+    <div id="menu2" class="tab-pane fade">
+      <br><p>Megan is a senior at Naperville Central High School in Naperville, Illinois. She enjoys listening to music, playing golf, and painting .In the future, Megan plans on majoring in Computer Science and Linguistics. </p>
+      <br>
     </div>
   </div>
 </div>
@@ -210,7 +154,7 @@ We would like to create a message board between restaurants and people who are h
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Help out <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>Site powered by and w3Schools and Firebase.</p>
 </footer>
 
 
